# Document_Scanner

./: CMakeLists.txt  README.md  my_scanner.cpp
test_img/: img_name.txt
